--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Secret Ingredient Sort</title>
+    <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
-    <h1>Open the console window!</h1>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <h1>Secret Ingredient Sort</h1>
+    <p><b>Open the console window!</b> There are no graphics, only console access.</p>
+    <p>Click <a href="https://youtu.be/TTJ4RVAplDI?si=1lzIxm0o2IWGhCHa">here</a> for the corresponding lesson on YouTube.</p>
+    <p>Click <a href="https://tradeideasphilip.github.io/secret-ingredient-sort/">here</a> for the source code.</p>
   </body>
 </html>
